Fix problems in the spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -669,7 +669,7 @@ footer.sticky-bottom {
 
       .abbr {
         min-height: 150px;
-        min-width: 200px;
+        //min-width: 180px;
         height: 2rem;
         margin-bottom: 0.5rem;
 
